@@ -65,6 +65,11 @@ rt_new_rti(struct db_i *dbip)
 
     /* XXX Move to rt_global_init() ? */
     if (BU_LIST_FIRST(bu_list, &rt_g.rtg_vlfree) == 0) {
+	char *envflags;
+	envflags = getenv("LIBRT_DEBUG");
+	if(envflags)
+	    rt_g.debug |= strtol(envflags, NULL, 0x10);
+
 	BU_LIST_INIT(&rt_g.rtg_vlfree);
     }
 
